# vista-sdk

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  package-lock.json
.github/workflows/: ___build-cpp.yml___  build-cpp copy.yml  build-cpp.yml  build-csharp.yml  build-js.yml  build-python.yml  js-build-and-publish.yml
cpp/: .editorconfig  .gitignore  CMakeLists.txt  README.md  cpp-csharp_Mapping.md
cpp/benchmark/: BENCHMARK.md  BM_ChdDictionary.cpp  BM_CodebooksLookup.cpp  BM_GmodLoad.cpp  BM_GmodLookup.cpp  BM_GmodPathParse.cpp  BM_GmodTraversal.cpp  BM_GmodVersioningConvertPath.cpp  BM_ShortStringHash.cpp  CMakeLists.txt  CodebooksLookup.cpp  GmodLoad.cpp  GmodLookup.cpp  GmodPathParse.cpp  GmodTraversal.cpp  GmodVersioningConvertPath.cpp  README.md  ShortStringHash.cpp  pch.h
cpp/benchmark/DataTypes/: BM_Decimal128.cpp  BM_Int128.cpp
cpp/cmake/: CMakeLists.txt  CompilersSettings.cmake  Dependencies.cmake  Sources.cmake  version.rc.in
cpp/doc/: CMakeLists.txt  index.html
cpp/include/dnv/vista/sdk/: ChdDictionary.h  ChdDictionary.hpp  ChdDictionary.inl  Codebook.h  Codebook.inl  CodebookName.h  CodebookName.inl  Codebooks.h  Codebooks.inl  CodebooksDto.h  CodebooksDto.inl  Config.h  EmbeddedResource.h  EmbeddedResource.inl  Exceptions.h  Gmod.h  Gmod.inl  GmodConstants.h  GmodDto.h  GmodDto.inl  GmodNode.h  GmodNode.inl  GmodPath.h  GmodPath.inl  GmodTraversal.h  GmodTraversal.inl  GmodVersioning.h  GmodVersioning.inl  GmodVersioningDto.h  GmodVersioningDto.inl  ILocalId.h  ILocalId.hpp  ILocalId.inl  ILocalIdBuilder.h  ILocalIdBuilder.hpp  ILocalIdBuilder.inl  ISO19848Dtos.h  ISO19848Dtos.inl  IUniversalId.h  IUniversalIdBuilder.h  (+31 more)
cpp/include/dnv/vista/sdk/Config/: AlgorithmConstants.h  CodebookConstants.h  DateTimeConstants.h  Decimal128Constants.h  DtoKeysConstants.h  GmodConstants.h  ISO19848Constants.h  LocalIdConstants.h  LocationsConstants.h  Platform.h  UniversalIdConstants.h  version.h.in
cpp/include/dnv/vista/sdk/DataTypes/: DateTimeISO8601.h  DateTimeISO8601.inl  Decimal128.h  Decimal128.inl  Int128.h  Int128.inl
cpp/include/dnv/vista/sdk/Internal/: ChdDictionary.h  ChdDictionary.inl  HashMap.h  MemoryCache.h  PathConversionCache.h
cpp/include/dnv/vista/sdk/Transport/: ISO19848.h  ISO19848.inl  ISO19848Dtos.h  ISO19848Dtos.inl
cpp/include/dnv/vista/sdk/Utils/: Hashing.h  StringBuilderPool.h  StringMap.h  StringUtils.h
cpp/include/dnv/vista/sdk/config/: AlgorithmConstants.h  CodebookConstants.h  Decimal128Constants.h  DtoKeys.h  GmodConstants.h  ISO19848Constants.h  LocalIdConstants.h  LocationsConstants.h  Platform.h  version.h
cpp/include/dnv/vista/sdk/internal/: ChdDictionary.h  ChdDictionary.inl  HashMap.h  MemoryCache.h  PathConversionCache.h  version.h.in
cpp/include/dnv/vista/sdk/utils/: HashMap.h  Hashing.h  MemoryCache.h  PathConversionCache.h  StringBuilderPool.h  StringMap.h  StringUtils.h
cpp/licenses/: LICENSE-zlib.txt  README.md
cpp/samples/simple/: Simple.cpp  Simple.h
cpp/src/dnv/vista/sdk/: ChdDictionary.cpp  Codebook.cpp  CodebookName.cpp  Codebooks.cpp  CodebooksDto.cpp  EmbeddedResource.cpp  Gmod.cpp  GmodDto.cpp  GmodNode.cpp  GmodPath.cpp  GmodTraversal.cpp  GmodVersioning.cpp  GmodVersioningDto.cpp  ILocalId.cpp  ILocalIdBuilder.cpp  ISO19848Dtos.cpp  IUniversalId.cpp  IUniversalIdBuilder.cpp  ImoNumber.cpp  LocalId.cpp  LocalIdBuilder.cpp  LocalIdItems.cpp  LocalIdParsingErrorBuilder.cpp  LocationBuilder.cpp  LocationParsingErrorBuilder.cpp  Locations.cpp  LocationsDto.cpp  MetadataTag.cpp  ParsingErrors.cpp  UniversalId.cpp  UniversalIdBuilder.cpp  VIS.cpp  VISVersion.cpp  VisVersion.cpp  pch.h
cpp/src/dnv/vista/sdk/DataTypes/: DateTimeISO8601.cpp  Decimal128.cpp  Int128.cpp
cpp/src/dnv/vista/sdk/Transport/: ISO19848.cpp  ISO19848Dtos.cpp
cpp/test/: CMakeLists.txt  Codebook.cpp  CodebookTests.cpp  Codebooks.cpp  CodebooksTests.cpp  GmodPath.cpp  GmodPathTests.cpp  GmodPath_test.cpp  GmodTests.cpp  GmodVersioning.cpp  GmodVersioningSmokeTests.cpp  GmodVersioningTests.cpp  GmodVersioning_test.cpp  Gmod_test.cpp  ISOString.cpp  ISOStringTests.cpp  ISOString_test.cpp  ImoNumber.cpp  ImoNumberTests.cpp  LocalIdTests.cpp  LocalIdTests_test.cpp  LocalId_test.cpp  LocationsTests.cpp  PrecisionTimer.h  TESTS_Codebook.cpp  TESTS_Codebooks.cpp  TESTS_Gmod.cpp  TESTS_GmodPath.cpp  TESTS_GmodVersioning.cpp  TESTS_GmodVersioningSmoke.cpp  TESTS_HashCompatibility.cpp  TESTS_ISOString.cpp  TESTS_ImoNumber.cpp  TESTS_LocalId.cpp  TESTS_Locations.cpp  TESTS_StringBuilderPoolTests.cpp  TESTS_UniversalId.cpp  TEST_Codebook.cpp  TEST_Codebooks.cpp  TEST_Gmod.cpp  (+10 more)
cpp/test/DataTypes/: TESTS_DateTime8601.cpp  TESTS_Decimal128.cpp  TESTS_Int128.cpp
cpp/test/Transport/: TESTS_ISO19848.cpp
cpp/test/testdata/: Codebook.json  ImoNumbers.json  IndividualizableSets.json  LocalIds.txt  Locations.json  PmodData.json
cpp/test/transport/: TESTS_ISO19848.cpp
cpp/test/utils/: TESTS_StringBuilderPoolTests.cpp
cpp/test_catch2/: CMakeLists.txt  Codebook_catch2.cpp  CodebooksTests_catch2.cpp  GmodTests_catch2.cpp  ISOStringTests_catch2.cpp  ImoNumberTests_catch2.cpp  LocalIdTests_catch2.cpp  LocalId_catch2.cpp  pch.h
cpp/test_gtest/: CMakeLists.txt  CodebookTests_gtest.cpp  CodebooksTests_gtest.cpp  Codebooks_gtest.cpp  GmodPath_gtest.cpp  GmodTests_gtest.cpp  GmodVersioning_gtest.cpp  ISOStringTests_gtest.cpp  ImoNumberTests_gtest.cpp  LocalIdTests_gtest.cpp  LocalId_gtest.cpp  pch.h
csharp/: .editorconfig  .gitignore  Build.csproj  Directory.Build.props  Pack.csproj  Vista.SDK.sln  global.json
csharp/.config/: dotnet-tools.json
csharp/benchmark/: README.md
js/: jest.config.js  package-lock.json  package.json  prebuild.ts  tsconfig.build.json
js/lib/: Client.ts  Codebook.ts  (+23 more)
parsing/: UniversalId.abnf  UniversalId.g4
python/: .gitignore  MANIFEST.in  definitions.py  requirements.txt  ruff.toml  setup.py
testdata/: Codebook.json  GmodPaths.json  IndividualizableSets.json  InvalidLocalIds.json  LocalIds.txt  Locations.json  PmodData.json  VersioningTestCases.json  hashValues.txt
(+389 files in other folders)
